app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app-v1

  template:
    metadata:
       labels:
         app: demo-app-v1
    spec:
      containers:
        - name: app
          image: us-east1-docker.pkg.dev/elite-vault-341617/gke-demo-artifacts/app:v1
          livenessProbe:
             httpGet:
                path: /version
                port: 8080
          readinessProbe:
             httpGet:
                path: /version
                port: 8080
          lifecycle:
             preStop:
                exec:
                   command: ["/bin/bash", "-c", "sleep 5"]
          ports:
            - containerPort: 8080
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - demo-app-v1
              topologyKey: topology.kubernetes.io/zone
