app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-01
spec:
  selector:
    app: demo-app-v1
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
