app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingrid
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: frank
spec:
  defaultBackend:
    service:
      name: sally
      port:
        number: 80
